# metamind

./: .env.example  .gitignore  README.md  app.py  hello.py  index.config  load.py  pyproject.toml
assets/: entity.py  relationship.py
assets/models/: entity.py  relationship.py
db/management/: create_tables.py  create_typedefs_tables.py
db/sql/: 1_attributes_index.sql  1_entities.sql  1_relationships.sql  1_tags.sql  1_typedefs.sql
graphdb/sql/: entities.sql  relationships.sql  tags.sql  typedefs.sql
indexstore/: __init__.py  index.py  index_store.py  models.py  postgres.py
typedefs/: registry.py
typedefs/models/: attribute_def.py  builtins.py  entity_def.py  enum_def.py  relationship_def.py
typedefs/storage/: common.py  entity_def.py  relation_def.py
typedefs/validator/: entity.py
types/: project.json
types/project/: document.json  repository.json
types/project/document/: google_doc.json  notion.json
utils/: db.py  logger.py
